--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,59 +93,6 @@ footer.index {
     align-items: center;
 }
 
-/* -------------------------------------------------------------bootstrap styles start*/
-.nav__logo {
-    width: 15rem;
-    filter: invert(90%);
-}
-
-.nav__list {
-    display: flex;
-    justify-content: space-between;
-    gap: 2.2em;
-}
-
-
-a.nav-link {
-    font-size: 1.6rem;
-    color: var(--white);
-    border-bottom: 2px solid transparent;
-    transition: all 300ms ease-in-out;
-
-}
-
-@media(max-width: 991px) {
-    .nav-item {
-        background-color: #212529;
-        padding: 1em;
-    }
-}
-
-.navbar-nav {
-    position: absolute;
-    right: 4em;
-}
-
-main.portfolio {
-    height: 100%;
-}
-
-.portfolio__container {
-    min-height: 100vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-a {
-    text-decoration: none;
-}
-
-header a {
-    color: var(--white);
-}
-
-/* -------------------------------------------------------------bootstrap styles ends*/
 
 /* hero */
 
@@ -618,4 +565,145 @@ li.nav__item.active {
 
 .socials a:hover {
     transform: scale(1.2);
+}
+
+/* -------------------------------------------------------------bootstrap index styles-------------------------------------------------------*/
+header a {
+    color: var(--white);
+}
+
+.nav__logo {
+    width: 15rem;
+    filter: invert(90%);
+}
+
+.nav__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 2.2em;
+}
+
+
+a.nav-link {
+    font-size: var(--sm);
+    color: var(--white);
+    border-bottom: 2px solid transparent;
+    transition: all 300ms ease-in-out;
+    border-bottom: 2px solid transparent;
+    margin-right: 1em;
+}
+
+a.nav-link:hover {
+    border-bottom: 2px solid var(--white);
+}
+
+.nav-link.active {
+    border-bottom: 2px solid var(--white);
+}
+
+
+@media(max-width: 991px) {
+    .nav-item {
+        background-color: #212529;
+        padding: 1em;
+    }
+}
+
+.navbar-nav {
+    position: absolute;
+    right: 4em;
+}
+
+main.portfolio {
+    height: 100%;
+}
+
+.portfolio__container {
+    min-height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* -------------------------------------------------------------bootstrap portfolio styles--------------------------------------------------------*/
+.card-title {
+    font-size: var(--md);
+    text-align: center;
+}
+
+.card-text {
+    text-align: justify;
+    font-size: var(--sm);
+    padding: 1em 0;
+}
+
+.btn-secondary {
+    font-size: var(--sm);
+    background-color: var(--black);
+    color: var(--white);
+    width: 15em;
+    transition: all 300ms ease-in-out;
+    border: 2px solid var(--black);
+    border-radius: 1rem;
+    margin: 0 auto;
+}
+
+.btn-secondary:hover {
+    color: var(--black);
+    background-color: var(--white);
+}
+
+/* -------------------------------------------------------------bootstrap youtube styles--------------------------------------------------------*/
+.video-cards {
+    height: 100%;
+}
+
+.yt-frame {
+    height: 30rem;
+    width: 100%;
+}
+
+/* -------------------------------------------------------------bootstrap contact styles-----------------------------------------------------*/
+
+.form-label,
+.form-check-label {
+    font-size: var(--sm);
+    color: var(--black);
+}
+
+.form-text {
+    font-size: 1.4rem;
+}
+
+#exampleCheck1 {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 2em;
+}
+
+/* -------------------------------------------------------------bootstrap about styles-------------------------------------------------------*/
+
+.about-image {
+    max-height: 100vh;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.about-title {
+    text-transform: uppercase;
+    font-size: var(--lg);
+    font-weight: 600;
+    font-family: var(--title);
+    letter-spacing: .5rem;
+}
+
+.about-text {
+    font-family: var(--text);
+    font-size: var(--sm);
+    margin-bottom: 2em;
+    line-height: 1.8;
 }
