--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -70,7 +70,7 @@ a.nav-link {
     }
 
     &.active {
-        border-bottom: 2px solid $white;
+        border-bottom: 2px solid #e63946;
     }
 }
 
