--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -1,15 +1,20 @@
-/* variabless */
+/* variables */
+$colores : ("black": #212529,
+    "white": #f8f9fa,
+);
+$fonts : ("title" : Poppins,
+    "text" : Raleway,
+);
+$sizes : ("xl": 4.6rem,
+    "lg": 3.6rem,
+    "md": 3rem,
+    "sm": 1.8rem,
+);
 
-/* colors */
-$black: #212529;
-$white: #f8f9fa;
-/* fonts */
-$title: 'Poppins',
-sans-serif;
-$text: 'Raleway',
-sans-serif;
-/* sizes */
-$xl: 4.6rem;
-$lg: 3.6rem;
-$md: 3rem;
-$sm: 1.8rem;
+// mixins
+@mixin flex($flex, $direction, $justify, $align) {
+    display: $flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
+}
