migre todas las paginas a sass y les cree sus carpetas para importarlas desde index.scss

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,8 @@ footer.index {
 
 .navbar-nav {
   position: absolute;
-  right: 4em; }
+  right: 4em;
+  z-index: 1; }
 
 a.nav-link, a.nav-link.active {
   font-size: 1.8rem;
@@ -178,54 +179,64 @@ main.index {
     .socials a:hover {
       transform: scale(1.2); }
 
-/* ----------------------------------------------------------------------sin sass youtube------------------------------------------------------------ */
-/* main */
 main.youtube {
   height: 100vh; }
 
 .youtube__container {
   height: 100%;
   display: flex;
-  gap: 1em;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
   padding: 2em 1em; }
 
 .youtube__title {
   text-align: center;
-  font-family: var(--title);
+  font-family: Poppins;
   font-weight: 600;
-  font-size: var(--xl);
-  color: var(--black); }
+  font-size: 4.6rem;
+  color: #212529; }
 
 .youtube__text {
   text-align: center;
-  font-family: var(--text);
-  font-size: var(--md);
+  font-family: Raleway;
+  font-size: 3rem;
   letter-spacing: .5rem; }
 
 .youtube__frame {
   width: 100%;
   height: 100%; }
 
-.youtube__btn {
-  display: block;
-  margin: 0 auto;
-  font-size: var(--sm);
-  color: var(--black);
-  background-color: var(--white);
-  border: 2px solid var(--black);
+.btn-secondary {
+  font-size: 1.8rem;
+  background-color: #212529;
+  color: #f8f9fa;
+  width: 15em;
+  transition: all 300ms ease-in-out;
+  border: 2px solid #212529;
   border-radius: 1rem;
-  padding: .5em 1em;
-  transition: all .3s ease-in-out; }
+  margin: 0 auto; }
+  .btn-secondary:hover {
+    color: #212529;
+    background-color: #f8f9fa; }
 
-.youtube__btn:hover {
-  color: var(--white);
-  background-color: var(--black); }
+.video-cards {
+  height: 100%; }
 
-/* -----------------------------------------------------------------------sin sass about------------------------------------------------------------- */
-/* main */
+.card-title {
+  font-size: 3rem;
+  text-align: center; }
+
+.card .yt-frame {
+  height: 30rem;
+  width: 100%; }
+
 main.about {
   height: 100vh; }
+
+.img__container {
+  overflow: hidden; }
 
 .about {
   height: 100%;
@@ -234,182 +245,138 @@ main.about {
   justify-content: center;
   align-items: center;
   margin: 2em; }
+  .about__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .about-image {
+    margin: 0 auto;
+    max-height: 80vh;
+    aspect-ratio: 1 / 2;
+    border-radius: 5px;
+    transition: all .3s ease-in-out; }
+    .about-image:hover {
+      transform: scale(1.05); }
+  .about-title {
+    text-transform: uppercase;
+    font-size: 4.6rem;
+    font-weight: 600;
+    font-family: Poppins;
+    letter-spacing: .6rem;
+    color: #212529;
+    padding: .8em 0; }
+  .about-text {
+    font-family: Raleway;
+    font-size: 1.8rem;
+    margin-bottom: 2em;
+    line-height: 2.2;
+    letter-spacing: .2rem; }
 
-.about__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-
-.about__image {
-  display: none; }
-
-.about__image img {
-  width: 100%;
-  aspect-ratio: 1 / 2; }
-
-.about__title {
-  font-size: var(--lg);
-  color: var(--black);
-  letter-spacing: .6rem;
-  padding: 1em 0; }
-
-.about__text {
-  text-align: center;
-  font-size: var(--md);
-  font-weight: 300;
-  color: var(--black);
-  padding: 0 1em 1em 1em; }
-
-/* ---------------------------------------------------------------------sin sass portfolio----------------------------------------------------------- */
-/* main */
 main.portfolio {
   height: 100%; }
 
-.portfolio__mainContainer {
+.portfolio__container {
   height: 100%;
   display: flex;
-  gap: 1em;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 1em;
   padding: 2em 0; }
 
-.porfolio__title {
-  font-size: var(--lg);
-  color: var(--black); }
+.portfolio__title {
+  font-size: 3.6rem;
+  color: #212529; }
 
 .portfolio__type {
   text-align: center;
-  font-size: var(--md);
+  font-size: 3rem;
   font-weight: 600;
-  color: var(--black);
+  color: #212529;
   padding: 1em 0; }
 
 .portfolio__subContainer {
   width: 90%;
   display: flex;
-  gap: 1em;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1em;
   padding: 1em;
   margin-bottom: 1em; }
 
-@media (min-width: 768px) {
-  .portfolio__subContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; } }
-
-.portfolio__container img {
-  cursor: pointer;
-  border-radius: .4rem;
-  margin: .5em;
-  transition: all .3s ease-in-out; }
-
-.portfolio__container img:hover {
-  transform: scale(1.01);
-  filter: blur(1px); }
-
-.portfolio__btn {
-  font-size: var(--sm);
-  font-family: var(--text);
-  color: var(--black);
-  background-color: var(--white);
-  border: 2px solid var(--black);
-  border-radius: 1rem;
-  padding: .6em 2em;
-  transition: all .3s ease-in-out; }
-
-.portfolio__btn:hover {
-  color: var(--white);
-  background-color: var(--black); }
-
-/* ----------------------------------------------------------------------sin sass contact------------------------------------------------------------ */
-.contact__title {
-  font-size: var(--lg);
-  text-align: center;
-  padding-top: 1em; }
+.portfolio .card {
+  overflow: hidden;
+  border-radius: 5px; }
+  .portfolio .card-img-top {
+    cursor: pointer;
+    transition: all .3s ease-in-out; }
+    .portfolio .card-img-top:hover {
+      transform: scalex(1.03); }
+  .portfolio .card-title {
+    font-size: 3rem;
+    text-align: center; }
+  .portfolio .card-text {
+    text-align: center;
+    font-size: 1.8rem;
+    padding: 1em 0; }
+  .portfolio .card .btn-secondary {
+    display: block;
+    font-size: 1.8rem;
+    background-color: #212529;
+    color: #f8f9fa;
+    max-width: 10em;
+    transition: all 300ms ease-in-out;
+    border: 2px solid #212529;
+    border-radius: 1rem;
+    margin: 0 auto; }
+    .portfolio .card .btn-secondary:hover {
+      background-color: #f8f9fa;
+      color: #212529; }
 
 main.contact {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1em; }
+  padding: 0 1em; }
 
-.wrapper {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, min-max(25rem, 1fr));
-  gap: 1em; }
+.contact__title {
+  font-size: 3.6rem;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 1rem;
+  padding-bottom: 2em; }
 
-.wrapper .box {
-  width: 100%;
-  position: relative;
-  padding: 2em; }
+.form-label {
+  font-family: Raleway;
+  font-size: 1.8rem;
+  padding: .6em 0; }
 
-.wrapper .box input {
-  width: 100%;
-  font-size: var(--sm);
-  background: transparent;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid var(--black);
-  transition: all .3s ease-in-out; }
+.form-check input {
+  font-size: 2rem; }
 
-.wrapper .box input:focus {
-  padding: .6em .3em;
-  background-color: whitesmoke; }
+.form-check label {
+  font-family: Raleway;
+  font-size: 1.8rem; }
 
-.wrapper .box label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: var(--black);
-  font-size: var(--sm);
-  padding: .5em;
-  transition: all .3s ease-in-out; }
-
-.wrapper .box input:focus ~ label {
-  padding: 0; }
-
-#message {
-  width: 100%;
-  font-size: var(--sm);
-  background: transparent;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid var(--black);
-  transition: all .3s ease-in-out; }
-
-.messageLabel {
-  position: relative;
-  top: -2em;
-  left: -.5em;
-  color: var(--black);
-  font-size: var(--sm);
-  padding: .5em;
-  transition: all .3s ease-in-out; }
-
-input.contact__btn {
-  font-family: var(--text);
-  font-size: var(--sm);
-  text-decoration: none;
-  color: var(--black);
-  background-color: var(--white);
-  border: 2px solid var(--black);
-  border-radius: .2em;
-  width: 100%;
+.btn {
+  font-size: 1.8rem;
+  font-weight: 600;
   display: block;
+  width: 18em;
   margin: 0 auto;
+  color: #f8f9fa;
+  background-color: #212529;
+  border: 2px solid transparent;
+  border-radius: .3em;
+  padding: .4em 2em;
+  margin-top: 3em;
   transition: all .3s ease-in-out; }
-
-input.contact__btn:hover {
-  color: var(--white);
-  background-color: var(--black); }
+  .btn:hover {
+    color: #212529;
+    background-color: #f8f9fa; }
 
 @media (min-width: 638px) {
   body.index {
