--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,5 +7,9 @@
 @import './partials/footer';
 // views
 @import './views/home';
+@import './views/youtube';
+@import './views/about';
+@import './views/portfolio';
+@import './views/contact';
 // media queries
 @import './misc/mixins'
